--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.12",
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"axios": "^1.3.4",
+		"jquery": "^3.6.3",
+		"react-router-dom": "^6.8.1",
+		"typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "sass --watch ./src/style/sass:./src/style/css --style=compressed --no-source-map"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+		"@types/jquery": "^3.5.16",
+		"@types/react-redux": "^7.1.25",
+		"sass": "^1.58.0"
+	}
 }
